# BuGUI

./: .gitignore  CMakeLists.txt  Doxyfile  GUIDE.md  PLANO.md  README.md  gendocs.sh
app/: CMakeLists.txt  StageAnchor.hpp  StageAssetInspector.hpp  StageAtlas.hpp  StageBorder.hpp  StageCalc.hpp  StageCanvas.hpp  StageCharts.hpp  StageCommon.hpp  StageDataGrid.hpp  StageDemo.hpp  StageDemo_old.hpp  StageDock.hpp  StageEditorWidgets.hpp  StageFakeBlender.hpp  StageFakeTiled.hpp  StageFileDialog.hpp  StageGizmo.hpp  StageGrid.hpp  StageHome.hpp  StageInputs.hpp  StageLayout.hpp  StageLayouts2.hpp  StageScroll.hpp  StageSoundWidgets.hpp  StageTab.hpp  StageTreeGrid.hpp  StageTreePropColor.hpp  StageViewport.hpp  StageWidgets.hpp  main.cpp  pch.hpp
atlas/: CMakeLists.txt  atlas_stage.cpp  main.cpp  packer.cpp  packer.hpp
base/: CMakeLists.txt
cmake/: BuGUIConfig.cmake.in
core/: CMakeLists.txt
core/include/: Batch.hpp  Config.hpp  Device.hpp  Font.hpp  Input.hpp  Math.hpp  Opengl.hpp  RenderState.hpp  RenderTexture.hpp  Texture.hpp  Types.hpp
core/src/: Batch.cpp  Color.cpp  Device.cpp  FileSystem.cpp  Font.cpp  Input.cpp  Pixmap.cpp  RenderTexture.cpp  Shader.cpp  Texture.cpp  pch.h
demo/: CMakeLists.txt  README.md  main.cpp
demo/backends/: SdlOpenGLBackend.cpp  SdlOpenGLBackend.hpp
demo_raylib/: CMakeLists.txt  RaylibBackend.cpp  RaylibBackend.hpp  main.cpp  stage_basic.cpp  stage_controls.cpp  stage_demo.cpp  stage_dialogs.cpp  stage_dock.cpp  stage_inputs.cpp  stage_menu.cpp  stage_menus.cpp  stage_properties.cpp  stage_scroll.cpp
demos/: CMakeLists.txt  main.cpp
demos/backends/: SdlOpenGLBackend.cpp  SdlOpenGLBackend.hpp
demos/stages/: stage_anchorlayouts.cpp  stage_animation_model.cpp  stage_appwidgets.cpp  stage_audio.cpp  stage_basic.cpp  stage_carousel.cpp  stage_charts.cpp  stage_cluster.cpp  stage_codeeditor.cpp  stage_console.cpp  stage_controls.cpp  stage_crm.cpp  stage_datagrid.cpp  stage_datetime.cpp  stage_dialogs.cpp  stage_dock.cpp  stage_fake_blender.cpp  stage_fake_ide.cpp  stage_fake_unity.cpp  stage_filedialog.cpp  stage_floatwindow.cpp  stage_focus.cpp  stage_gizmos.cpp  stage_inputs.cpp  stage_inputs2.cpp  stage_layouts.cpp  stage_menu.cpp  stage_menus.cpp  stage_newfeatures.cpp  stage_nodeeditor.cpp  stage_scroll.cpp  stage_slidepanel.cpp  stage_thumbnail.cpp  stage_timeline.cpp  stage_toolbar.cpp  stage_treepropcolor.cpp
docs/html/: Animation_8hpp.html  AppWidgets_8hpp.html  AssetBrowser_8hpp.html  AudioWidgets_8hpp.html  AutomotiveWidgets_8hpp.html  BasicWidgets_8hpp.html  BuGUI_8hpp.html  BuGUI__base_8hpp.html  BuImage_8hpp.html  ChartWidgets_8hpp.html  CodeEditor_8hpp.html  ComboBox_8hpp.html  ConsoleWidget_8hpp.html  DataWidgets_8hpp.html  DialogWidgets_8hpp.html  DirCache_8hpp.html  DockPanel_8hpp.html  FileDialog_8hpp.html  FileSystem_8hpp.html  GizmoWidgets_8hpp.html  IconAtlas_8hpp.html  InputWidgets_8hpp.html  ItemModel_8hpp.html  LayoutWidgets_8hpp.html  MenuWidgets_8hpp.html  NodeEditor_8hpp.html  ScrollWidgets_8hpp.html  Signal_8hpp.html  TextInputWidgets_8hpp.html  Theme_8hpp.html  ThumbnailGrid_8hpp.html  Timeline_8hpp.html  ToolBar_8hpp.html  TreePropertyColorWidgets_8hpp.html  Utf8_8hpp.html  ViewWidgets_8hpp.html  WidgetApp_8hpp.html  WidgetSerializer_8hpp.html  Widget_8hpp.html  Widgets_8hpp.html  (+480 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+149 more)
editor/: CMakeLists.txt  main.cpp
stress/: CMakeLists.txt  main.cpp  stress_stage.cpp
tests/: CMakeLists.txt  batch_clip_gl_test.cpp  terrain_bake_mask_test.cpp
tutorials/: CMakeLists.txt
tutorials/widgets/: CMakeLists.txt  README.md
tutorials/widgets/01-basic/: README.md  expected.md  main.cpp
tutorials/widgets/02-inputs/: README.md  expected.md  main.cpp
tutorials/widgets/03-layouts/: README.md  expected.md  main.cpp
tutorials/widgets/04-scroll-list/: README.md  expected.md  main.cpp
tutorials/widgets/05-tree-datagrid/: README.md  expected.md  main.cpp
tutorials/widgets/06-menus-dialogs/: README.md  expected.md  main.cpp
tutorials/widgets/07-tabs-dock/: README.md  expected.md  main.cpp
tutorials/widgets/08-node-curve-timeline/: README.md  expected.md  main.cpp
tutorials/widgets/09-audio-widgets/: README.md  expected.md  main.cpp
tutorials/widgets/10-serialization/: README.md  expected.md  main.cpp
tutorials/widgets/11-gizmo2d-property-panel/: README.md  expected.md  main.cpp
tutorials/widgets/12-gizmo3d-property-panel/: README.md  expected.md  main.cpp
widgets/: CMakeLists.txt
widgets/include/: ADSRWidget.hpp  Animation.hpp  AppWidgets.hpp  AssetBrowser.hpp  AudioWidgets.hpp  AutomotiveWidgets.hpp  BasicWidgets.hpp  BuGUI.hpp  BuGUI_base.hpp  BuGUI_light.hpp  BuImage.hpp  ChartWidgets.hpp  CodeEditor.hpp  ColorPicker.hpp  ComboBox.hpp  ConsoleWidget.hpp  CurveEditor.hpp  DataWidgets.hpp  Dialog.hpp  DialogWidgets.hpp  Dialogs.hpp  DirCache.hpp  DockPanel.hpp  FileDialog.hpp  FileSystem.hpp  Gizmo2D.hpp  Gizmo3D.hpp  GizmoWidgets.hpp  GradientEditor.hpp  HistogramWidget.hpp  IconAtlas.hpp  InputWidgets.hpp  ItemModel.hpp  Knob.hpp  LayoutWidgets.hpp  ListWidgets.hpp  MenuWidgets.hpp  NodeEditor.hpp  PianoRoll.hpp  PlotWidget.hpp  (+22 more)
widgets/src/: ADSRWidget.cpp  Animation.cpp  AppWidgets.cpp  AssetBrowser.cpp  AudioWidgets.cpp  AutomotiveWidgets.cpp  BasicWidgets.cpp  BuGUI.cpp  BuImage.cpp  ChartWidgets.cpp  CodeEditor.cpp  ComboBox.cpp  ConsoleWidget.cpp  CurveEditor.cpp  DataGrid.cpp  DataWidgets.cpp  DialogWidgets.cpp  Dialogs.cpp  DirCache.cpp  DockPanel.cpp  FileDialog.cpp  FileSystem.cpp  Gizmo2D.cpp  Gizmo3D.cpp  GizmoWidgets.cpp  GradientEditor.cpp  HistogramWidget.cpp  IconAtlas.cpp  InputWidgets.cpp  ItemModel.cpp  Knob.cpp  LayoutWidgets.cpp  MenuWidgets.cpp  NodeEditor.cpp  PianoRoll.cpp  PlotWidget.cpp  ScrollWidgets.cpp  SpectrumAnalyzer.cpp  TextEdit.cpp  TextInputWidgets.cpp  (+15 more)
